# pico_chess_clock

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md
scripts/: setup-wsl.sh
src/: audio.cpp  audio.hpp  clock.cpp  clock.hpp  font5x7.cpp  font5x7.hpp  main.cpp  settings.hpp  storage.cpp  storage.hpp  ui.cpp  ui.hpp
